# music-platform-backend

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  db1.sqlite3  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
Cusers/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
Cusers/migrations/: 0001_initial.py
Roles/: apps.py  models.py  serializers.py  urls.py  views.py
Roles/migrations/: 0001_initial.py
album/: admin.py  models.py  serializers.py  urls.py  views.py
album/migrations/: 0001_initial.py
backend/: permission.py  settings.py  urls.py  views.py
genre/: models.py  serializers.py  urls.py  views.py
genre/migrations/: 0001_initial.py
managers/: FilterDeleted.py  SoftDelete.py
report_ban/: admin.py  apps.py  decorators.py  models.py  serializers.py  task.py  urls.py  views.py
report_ban/migrations/: 0001_initial.py
seed/: albums.json  genres.json  roles.json  tours.json  tracks.json  users.json
stats/: csv_views.py  serializers.py  urls.py  views.py
templates/: error.html
tour/: admin.py  models.py  serializers.py  urls.py  views.py
tour/migrations/: 0001_initial.py
track/: admin.py  models.py  serializers.py  urls.py  views.py
track/migrations/: 0001_initial.py
utils/: fields.py  save_image.py
