[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["seejn <seejnmaharjan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
pillow = "^10.3.0"
djangorestframework-simplejwt = "^5.3.1"
gunicorn = "^20.0.4"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
